--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 redis:
   host: localhost
   port: 6379
-  max-wait: 30000
-  max-active: 100
-  max-idle: 20
-  min-idle: 0
-  timeout: 3000
+  max-wait: 30000 # 连接池最大阻塞等待时间（负值表示无限制）
+  max-active: 100 # 连接池最大连接数（负值表示无限制）
+  max-idle: 20    # 连接池中的最大空闲连接
+  min-idle: 0     # 连接池中的最小空闲连接
+  timeout: 3000   # 连接超时
