对象模板MongoDB操作完成并开放接口，/template 包括： /create 创建对象 /find_all 查询全部 /find_by_key 根据key查询 /find 条件查询 /delete_by_key 根据key删除 /delete 条件删除 /update 条件修改，需要一个query和一个update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,5 @@ redis:
 spring:
   data:
     mongodb:
-      uri=mongodb://localhost:27017/test
+      uri:
+        mongodb://localhost:27017/test
