--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 redis:
-  host: localhost
+  hostName: localhost
   port: 6379
   max-wait: 30000 # 连接池最大阻塞等待时间（负值表示无限制）
   max-active: 100 # 连接池最大连接数（负值表示无限制）
@@ -8,6 +8,9 @@ redis:
   timeout: 3000   # 连接超时
   cache-size: 5   # 对象属性表大小
   evict-size: 2   # 单次淘汰的数据量
+  database:
+    attrDB: 0
+    objectDB: 1
 
 spring:
   data:
